Self/mydevorg/Unpackaged/Config/objects/Establishment__c.object
<CustomObject>
    <description>Establishments for Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account related to the Establishment</description>
        <inlineHelpText>Link the Account to the Establishment</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Establishments</relationshipLabel>
        <relationshipName>Establishments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Structure_Code__c</fullName>
        <description>Indicates if subject is a single location, headquarters or branch.</description>
        <inlineHelpText>Indicates if subject is a single location, headquarters or branch.</inlineHelpText>
        <label>Business Structure Code</label>
        <picklist>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarter/Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <description>Name of the city where the establishment is located. Generally in the local language</description>
        <inlineHelpText>Name of the city where the establishment is located. Generally in the local language</inlineHelpText>
        <label>City Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_State__c</fullName>
        <formula>TRIM(City_Name__c) &amp; &quot;, &quot; &amp;  TRIM( State_Province_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City, State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Relationship__c</fullName>
        <description>If the establishment has qualifying MIF under an active Xerox service agreement, then the Client_Relationship__c field shall be populated with the value &quot;Customer&quot;, else it shall be populated with the value &quot;Non Customer&quot;</description>
        <inlineHelpText>A Customer is an establishment that has qualifying MIF under and active Xerox service agreement.</inlineHelpText>
        <label>Client Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>2 character ISO Country code</description>
        <inlineHelpText>2 character ISO Country code</inlineHelpText>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Telephone_Access_Code__c</fullName>
        <description>The international dialling code used to access the country phone system from outside the country.  Can be 1 to 3 digits.</description>
        <inlineHelpText>The international dialling code used to access the country phone system from outside the country.  Can be 1 to 3 digits.</inlineHelpText>
        <label>Country Telephone Access Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>The County__c field shall be populated with the name of the county the establishment is located in.</description>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Agency_ID__c</fullName>
        <description>The Credit Agency ID (greydon/coface number)</description>
        <inlineHelpText>The Credit Agency ID (greydon/coface number)</inlineHelpText>
        <label>Credit Agency ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <description>The Credit_Rating__c field shall be populated with the credit rating, followed by a hyphen, followed by the credit rating description for the establishment.</description>
        <label>Credit Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <description>The Credit_Reason__c field shall be populated with the reason associated with the Credit Rating.</description>
        <label>Credit Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the establishment is a Decision Making Location then the Decision_Making_Location__c field shall be populated with the numeric value of 1, else it shall be populated with the numeric value of 0.</description>
        <label>Decision Making Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dom_Ultimate_Duns_Number__c</fullName>
        <description>D-U-N-S Number for the domestic ultimate, which is the highest family member in the same country as case business record as you walk up this ‘branch’ of the tree.</description>
        <inlineHelpText>DUNS number of ultimate parent company within the same country as business</inlineHelpText>
        <label>Dom Ultimate Duns Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duns_Number__c</fullName>
        <description>A randomly generated nine-digit number assigned by D&amp;B to identify unique business establishments.</description>
        <inlineHelpText>A randomly generated nine-digit number assigned by D&amp;B to identify unique business establishments.</inlineHelpText>
        <label>Duns Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_Here__c</fullName>
        <description>The number of employees at this location.</description>
        <inlineHelpText>The number of employees at this location.</inlineHelpText>
        <label>Employees Here</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estab_Copy_Volume__c</fullName>
        <label>Estab Copy Volume</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estab_Turnover__c</fullName>
        <description>Revenue</description>
        <inlineHelpText>Revenue</inlineHelpText>
        <label>Estab Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estab_White_Collar__c</fullName>
        <description>Number of office staff</description>
        <inlineHelpText>Number of office staff</inlineHelpText>
        <label>Estab White Collar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estab_page_volume__c</fullName>
        <description>Page volume</description>
        <inlineHelpText>Page volume</inlineHelpText>
        <label>Estab page volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Establishment_Class__c</fullName>
        <description>The Establishment_Class__c field shall be populated with the Establishment Class of the establishment.</description>
        <label>Establishment Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_number__c</fullName>
        <description>The fax number of the business.</description>
        <inlineHelpText>The fax number of the business.</inlineHelpText>
        <label>Fax number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Franchise_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the establishment is a Franchise then the Franchise_Indicator__c field shall be populated with the numeric value of 1, else it shall be populated with the numeric value of 0.</description>
        <label>Franchise Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Establishment_ID__c</fullName>
        <description>CI  / ESOR unique establishment identifier</description>
        <inlineHelpText>CI  / ESOR unique establishment identifier</inlineHelpText>
        <label>Global Establishment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Duns_number__c</fullName>
        <description>The D-U-N-S number of the upper most parent of a corporate family.</description>
        <inlineHelpText>The D-U-N-S number of the upper most parent of a corporate family.</inlineHelpText>
        <label>Global Ultimate Duns number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarter_Parent_Duns_number__c</fullName>
        <description>DUNS Number of the Headquarters/Parent of the business location</description>
        <inlineHelpText>DUNS Number of the Headquarters/Parent of the business location</inlineHelpText>
        <label>Headquarter Parent Duns number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Code__c</fullName>
        <description>A one-position code, in conjunction with the status and subsidiary indicators that pinpoints the location of an establishment within a corporate hierarchy.</description>
        <inlineHelpText>A one-position code, in conjunction with the status and subsidiary indicators that pinpoints the location of an establishment within a corporate hierarchy.</inlineHelpText>
        <label>Hierarchy Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_SIC_Desc__c</fullName>
        <label>Industry SIC Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>Language</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flemish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Type__c</fullName>
        <label>Last Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>The Latitude__c field shal be populated with the latitude coordinate of the establishment.</description>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>SIC Code Description, describes the operations or activities of the business. It relates to the four-digit primary 1987 US Government SIC code</description>
        <inlineHelpText>SIC Code Description, describes the operations or activities of the business. It relates to the four-digit primary 1987 US Government SIC code</inlineHelpText>
        <label>Line of Business</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Activity_Code_Type__c</fullName>
        <label>Local Activity Code Type</label>
        <picklist>
            <picklistValues>
                <fullName>1972 SIC CODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987 SIC CODE                           </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 DIGIT 1987 SIC CODE                  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 DIGIT 1987 SIC CODE                  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA PACIFIC SIC CODE                  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM NACE CODE                      </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM NACE CODE 2008                    </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADIAN D&amp;B SIC PLUS 4                </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADIAN GOVERNMENT SIC                </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADIAN GOVERNMENT SIC PLUS 4         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DETAILED LEVEL ACTIVITY CODE           </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNB HYLDAHL NACE                       </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUROPEAN NACE CODE                     </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINNISH NACE CODE                      </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINNISH NACE REV2 CODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH LEVEL ACTIVITY CODE               </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISIC                                   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITALY NACE CODE                         </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODERATE LEVEL ACTIVITY CODE           </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NACE REVISION 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAF (NOMENCLATURE D&apos;ACTIVITE FRANCAISE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETHERLAND KVK ACTIVITY CODE           </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETHERLANDS NACE CODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETHERLANDS SBI 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH AMERICAN INDUSTRIAL CLSFN SYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORWEGIAN NACE CODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORWEGIAN NACE CODE REV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBA CODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEDEN NACE CODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK FIVE DIGIT SIC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>The Longitude__c field shal be populated with the longitude coordinate of the establishment.</description>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_ID_System_Code__c</fullName>
        <description>The code that identifies the type of National ID</description>
        <inlineHelpText>The code that identifies the type of National ID</inlineHelpText>
        <label>National ID System Code</label>
        <picklist>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siren / Siret</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy identifier -Parent Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Created Siren</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>National_ID__c</fullName>
        <description>Business identification number or code used in some countries for business registration and tax collection</description>
        <inlineHelpText>Business identification number or code used in some countries for business registration and tax collection</inlineHelpText>
        <label>National ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_PC_Users__c</fullName>
        <description>Number of PC users</description>
        <inlineHelpText>Number of PC users</inlineHelpText>
        <label>Number of PC Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Color_Acq__c</fullName>
        <description>The Office_Color_Acq__c shall be populated with the Office Color Acquisition score for the establishment.</description>
        <label>Office Color Acq</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Mono_Acq__c</fullName>
        <description>The Office_Mono_Acq__c  shall be populated with the Office Mono Acquisition score for the establishment.</description>
        <label>Office Mono Acq</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Taking_Territory__c</fullName>
        <description>Report Taking Territory</description>
        <inlineHelpText>Report Taking Territory</inlineHelpText>
        <label>Order Taking Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Credit_Agency_ID__c</fullName>
        <description>Parent Credit agency number</description>
        <inlineHelpText>Credit Agency ID for Parent</inlineHelpText>
        <label>Parent Credit Agency ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal or zip code for the physical address location of the business.</description>
        <inlineHelpText>Postal or zip code for the physical address location of the business.</inlineHelpText>
        <label>Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Copies__c</fullName>
        <description>The Potential_Copies__c field shall be populated with the numeric value of the number of copies the establishment may potentially generate.</description>
        <label>Potential Copies</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Prints__c</fullName>
        <description>The Potential_Prints__c field shall be populated with the numeric value of the number of prints the establishment may potentially generate.</description>
        <label>Potential Prints</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_XRX_Order_Taking_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there is an order in ValueQuix that has been written and signed at this location then the Previous_XRX_Order_Taking_Location__c field shall be populated with the numeric value of 1, else it shall be populated with the numeric value of 0.</description>
        <label>Previous XRX Order Taking Location </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Local_Activity_Code__c</fullName>
        <description>France only - local industry classification</description>
        <inlineHelpText>France only - local industry classification</inlineHelpText>
        <label>Primary Local Activity Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProFinance_ID__c</fullName>
        <label>ProFinance ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Color_Acq__c</fullName>
        <description>The Prod_Color_Acq__c  shall be populated with the Production Color Acquisition score for the establishment.</description>
        <label>Prod Color Acq</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Mono_Acq__c</fullName>
        <description>The Prod_Mono_Acq__c  shall be populated with the Production Mono Acquisition score for the establishment.</description>
        <label>Prod Mono Acq</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_Account_ID__c</fullName>
        <description>If the establishment is part of an account that has a Rollup Account ID in the SOR then the Rollup_Account_ID__c field shall be populated with this value.</description>
        <label>Rollup Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <description>The Sales_Channel__c field shall be populated with the abbreviation of the channel that covers the establishment.</description>
        <label>Sales Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>Region the establishment belongs to</description>
        <inlineHelpText>Region the establishment belongs to</inlineHelpText>
        <label>Sales Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Name__c</fullName>
        <label>Secondary Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Legacy System Identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy System Identifier</inlineHelpText>
        <label>Source System ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Province_Name__c</fullName>
        <description>Name of the state/province where the establishment is located</description>
        <inlineHelpText>Name of the state/province where the establishment is located</inlineHelpText>
        <label>State Province Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <description>The physical street location of the business. Generally in local Language</description>
        <inlineHelpText>The physical street location of the business. Generally in local Language</inlineHelpText>
        <label>Street Address 1</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <description>The physical address line 2 of the the business. Generally in the local language</description>
        <inlineHelpText>The physical address line 2 of the the business. Generally in the local language</inlineHelpText>
        <label>Street Address 2</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the business is a subsidiary or not</description>
        <inlineHelpText>Indicates whether the business is a subsidiary or not</inlineHelpText>
        <label>Subsidiary Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <description>Telephone number for the business with no formatting or punctuation</description>
        <inlineHelpText>Telephone number for the business</inlineHelpText>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tradestyle_Name__c</fullName>
        <description>The TradeStyle Or Seconday Name of the business, if used</description>
        <inlineHelpText>The TradeStyle Or Seconday Name of the business, if used</inlineHelpText>
        <label>Tradestyle Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_1987_SIC1__c</fullName>
        <description>Standard Industrial Classification. The primary SIC Code for the business.</description>
        <inlineHelpText>Standard Industrial Classification. The primary SIC Code for the business.</inlineHelpText>
        <label>US SIC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_SIC_Code_Description__c</fullName>
        <description>The US_1987_SIC1__Description_c field shall be populated with the SIC code description for the establishment.</description>
        <label>US SIC Code Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_number__c</fullName>
        <description>Value Added Tax number</description>
        <inlineHelpText>Value Added Tax number</inlineHelpText>
        <label>VAT number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Estab_Roles__c</fullName>
        <description>Business Partner Role definition</description>
        <inlineHelpText>Business Partner Role definition</inlineHelpText>
        <label>Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Bill To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Rebate Recipient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Rebate Recipient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Establishment_ID__c</fullName>
        <description>Custom formula field to get 18 digit Estab ID. It&apos;ll be used by Adminstrators for data massaging.</description>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <label>18 Digit Establishment ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XNAC5__c</fullName>
        <description>The XNAC5__c field shall be populated with the 5 character XNAC of the account the establishment belongs to.</description>
        <label>XNAC5</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Establishment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>City_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Source_System_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Legal Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Establishments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>